--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "5.3.0"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "bulma-stylus": "^0.8.0",
     "cheerio": "^1.0.0-rc.5",
     "hexo": "^5.3.0",
@@ -30,6 +31,7 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^1.0.0",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-util": "^2.4.0",
     "inferno": "^7.4.6",
     "inferno-create-element": "^7.4.6",
