--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma-stylus": "^0.8.0",
     "cheerio": "^1.0.0-rc.5",
     "hexo": "^5.3.0",
+    "hexo-algolia": "^1.3.1",
     "hexo-component-inferno": "^0.10.4",
     "hexo-deployer-git": "^2.0.0",
     "hexo-generator-archive": "^1.0.0",
@@ -23,6 +24,8 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-search": "^2.4.1",
+    "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-helper-live2d": "^3.1.1",
     "hexo-log": "^2.0.0",
