--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hexo-util": "^2.4.0",
     "inferno": "^7.4.6",
     "inferno-create-element": "^7.4.6",
-    "live2d-widget-model-hijiki": "^1.0.5"
+    "live2d-widget-model-hijiki": "^1.0.5",
+    "next": "^10.0.5"
   }
 }
