--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 蒙珣的博客
 subtitle: 记录生活的点点滴滴
-description: 这是介于现在与过去之间的墙。有时候这道墙会屹立不倒，有时候则会崩垮，然后我就能想起背后隐藏着什么。
+description: 过去就像攥在手中的一把干沙，自以为攥得很紧，其实早就从指缝中流光了。
 keywords:
 author: 蒙珣
 language: zh_CN
